assets/layout: reduce no. tiles on smaller screens fixes #2706

--- a/meinberlin/assets/scss/_layout.scss
+++ b/meinberlin/assets/scss/_layout.scss
@@ -66,7 +66,7 @@
     }
 
     .l-tiles-3 {
-        @include grid-tiles(3);
+        @include grid-tiles(2);
     }
 
     .l-tiles-4 {
@@ -85,6 +85,10 @@
 
     .l-col-9-3 {
         @include grid-span(9, 3);
+    }
+
+    .l-tiles-3 {
+        @include grid-tiles(3);
     }
 
     .l-tiles-4 {
